hphp/hack/test/typecheck/truthiness_test_13.php.exp
File "truthiness_test_13.php", line 4, characters 7-8:
Sketchy condition: testing the truthiness of an array key (int/string) may not behave as expected.
The values 0, '', and '0' are all considered falsy. Test for them explicitly. (Typing[4276])
