hphp/hack/test/typecheck/truthiness_test_13.php
<?hh // strict

function test(arraykey $x): void {
  if ($x) {
  }
}
